@@ -1,3 +1,9 @@
+Mon Dec 14  Felix Bellaby  <felix@pooh.u-net.com>
+
+	* gnome-client.c (gnome_dlient_get_config_prefix): change the prefix
+	after each Save Yourself to avoid cuorrupting past saves.
+	* gnome-client.h: extra docs for obscure bits of the protocol.
+
 1998-12-14  Ettore Perazzoli  <ettore@comm2000.it>
 
 	* gnome-app.c: Removed some `#if 0'ed stuff.
